--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^7.7.5",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "nrm": "^1.2.5"
   }
 }
